--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
+    "react-tinder-card": "^1.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
